# recruitment-exercises-hydrosat

./: .dockerignore  .env.k8s.template  .env.template  .envrc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  .yamlfmt  .yamllint.yaml  CONTRIBUTING.md  GUIDELINES.md  LICENCE  Makefile  README.md  TESTING.md  pyproject.toml
.cursor/rules/: README.md  fail-fast.mdc  hexagonal-architecture.mdc  kiss-principle.mdc  language-english.mdc  medallion-architecture.mdc  no-silent-null.mdc  python-project-structure.mdc  solid-dip.mdc  solid-isp.mdc  solid-lsp.mdc  solid-ocp.mdc  solid-srp.mdc
docs/assets/readme/geojson/: fields.geojson
infra/docker/: Dockerfile
infra/k8s/: minio-external-service.yaml
infra/k8s/helm/dagster/: values.yaml
infra/local/: docker-compose.yml  k8s-init.sh  k8s-start.sh  k8s-stop.sh  k8s-update.sh  s3-move-late-files.sh  s3-seed.sh
infra/local/config/: colima.yaml.template
infra/terraform/: .terraform.lock.hcl  Makefile  common.tf.tf  k8s_dagster.tf  providers.tf  s3.tf  tf-vars.sh  variables.tf  versions.tf
ndvi_monitoring/: assets.py  assets_fn.py  definitions.py
ndvi_monitoring/domain/: bbox.py  field.py
ndvi_monitoring/resources/: minio_s3_resource.py  settings_resource.py  stac_resource.py
ndvi_monitoring/sensors/: s3_file_sensor.py
seeding/s3/staticdata/config/: bbox.geojson
seeding/s3/staticdata/fields/pending/: fields-2025-04-30-00:01:07.geojson
seeding/s3/staticdata/late-fields/: late-fields-2025-04-30-19:04:18.geojson
tests/: test_s3_resource.py  test_settings_resource.py
