[project]
name = "recruitment_exercises_hydrosat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
  "dagster==1.10.12",
  "dagster-aws==0.26.12",
  "dagster-k8s==0.26.12",
  "dagster-postgres==0.26.12",
  "geopandas==1.0.1",
  "jsonpath-ng==1.7.0",
  "numpy==2.2.5",
  "pandas==2.2.3",
  "pystac-client==0.8.6",
  "rasterio==1.4.3",
  "shapely==2.1.0",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.10.12",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.dagster]
module_name = "ndvi_monitoring.definitions"
code_location_name = "ndvi_monitoring"
